View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032991 | Open CASCADE | OCCT:Visualization | public | 2022-05-28 01:03 | 2023-03-19 20:46 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.3 | Fixed in Version | 7.6.3 | ||
Summary | 0032991: Visualization, TKOpenGl - OpenGl_Window::Resize() ignores window virtual flag on macOS | ||||
Description | While embedding OCCT viewer into external OpenGL engine, OpenGl_Window::Resize() should not rely on native window dimensions, as rendering might be done into offscreen FBO of different size. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32991 has been created by kgv. SHA-1: dc27a228d00104d1f2c234ac79c887c37552d656 Detailed log of new commits: Author: kgv Date: Sat May 28 01:04:31 2022 +0300 0032991: Visualization, TKOpenGl - OpenGl_Window::Resize() ignores window virtual flag on macOS Added handling of Aspect_Window::IsVirtual() flag on macOS platform. |
|
Branch CR32991 has been updated forcibly by kgv. SHA-1: ab5b133c75bd8f462e74bd3a587aecb240090c39 |
|
Branch CR32991 has been updated forcibly by kgv. SHA-1: 6cdbd6a0e5db9c6ab7b84ef4cf41d0b5a36433c9 |
|
Patch is ready for review - OCCT: branch CR32991. http://jenkins-test-occt/view/CR32991-master-KGV/ |
|
The patch was reviewed |
|
Combination - OCCT branch : IR-2022-06-04 master SHA - 24e4b3c83b237dad583f87c983eb06433d56c203 e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-06-04 SHA - ad07e82b28135dbba6cde30827d08f1c0598cf50 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18736.560000000623 / 18755.550000000607 [-0.10%] Products Total CPU difference: 11708.410000000114 / 11723.710000000106 [-0.13%] Windows-64-VC14: OCCT Total CPU difference: 20637.375 / 20721.125 [-0.40%] Products Total CPU difference: 13299.6875 / 13249.9375 [+0.38%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32991 has been deleted by mnt. SHA-1: 6cdbd6a0e5db9c6ab7b84ef4cf41d0b5a36433c9 |
occt: master 812afe4e 2022-05-28 01:04:31 Committer: |
0032991: Visualization, TKOpenGl - OpenGl_Window::Resize() ignores window virtual flag on macOS Added handling of Aspect_Window::IsVirtual() flag on macOS platform. |
Affected Issues 0032991 |
|
mod - src/Cocoa/Cocoa_Window.mm | Diff File | ||
mod - src/OpenGl/OpenGl_Window_1.mm | Diff File | ||
mod - src/ViewerTest/ViewerTest_EventManager.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-05-28 01:03 | kgv | New Issue | |
2022-05-28 01:03 | kgv | Assigned To | => kgv |
2022-05-28 01:04 | git | Note Added: 0108674 | |
2022-05-28 01:33 | git | Note Added: 0108676 | |
2022-05-28 02:30 | git | Note Added: 0108677 | |
2022-05-29 15:36 | kgv | Assigned To | kgv => osa |
2022-05-29 15:36 | kgv | Status | new => resolved |
2022-05-29 15:36 | kgv | Test case number | => N/A |
2022-05-29 15:36 | kgv | Note Added: 0108734 | |
2022-05-30 08:53 |
|
Assigned To | osa => bugmaster |
2022-05-30 08:53 |
|
Status | resolved => reviewed |
2022-05-30 08:53 |
|
Note Added: 0108740 | |
2022-06-04 10:08 |
|
Test case number | N/A => Not required |
2022-06-04 10:08 |
|
Status | reviewed => tested |
2022-06-04 10:08 |
|
Note Added: 0108847 | |
2022-06-04 12:56 |
|
Changeset attached | => occt master 812afe4e |
2022-06-04 12:57 | kgv | Assigned To | bugmaster => kgv |
2022-06-04 12:57 | kgv | Status | tested => verified |
2022-06-04 12:57 | kgv | Resolution | open => fixed |
2022-06-04 12:59 | git | Note Added: 0108859 | |
2022-06-13 13:44 | kgv | Target Version | 7.7.0 => 7.6.3 |
2022-10-19 15:50 |
|
Assigned To | kgv => vpozdyayev |
2023-03-19 20:46 | vglukhik | Status | verified => closed |
2023-03-19 20:46 | vglukhik | Fixed in Version | => 7.6.3 |