0032991: Visualization, TKOpenGl - OpenGl_Window::Resize() ignores window virtual flag on macOS

Added handling of Aspect_Window::IsVirtual() flag on macOS platform.